Name:                   contraption
Version:                0.1.1
Author:                 Scott <scott.murphy@plowtech.net>
Maintainer:             Scott <scott.murphy@plowtech.net>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Language.Contraption
                        Language.Contraption.Types
  Other-Modules:        Language.Contraption.Internal
  Build-Depends:        base >= 4 && < 5
                      , system-filepath
                      , aeson
                      , trifecta
                      , validation
                      , vinyl                                  
                      , singletons                                 
                      , basic-prelude             
                      , template-haskell           

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , basic-prelude
                      , hspec
                      , lens
                      , system-filepath                      
                      , trifecta
                      , validation
                      , vinyl                                  
                      , singletons
                      , template-haskell                                                         


Source-Repository head
  Type:                 git
--  Location:             
